height fixed and overflow added

--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ body {
         /* display: flex; */
         /* justify-content: center;
         align-items: center; */
-        height: 200vh;
+        height: 150vh;
         background-color: #009688;
         /* overflow: hidden; */
     }
@@ -303,9 +303,9 @@ body {
         padding: 20px;
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        /* overflow: hidden;
+        overflow: hidden;
         overflow-x: hidden;
-        overflow-y: hidden; */
+        overflow-y: hidden;
         width: 100%;
     }
     
